brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/Internal_Interview_Question_Log__c.object-meta.xml
<CustomObject>
    <label>Internal Interview Question Log</label>
    <nameField>
        <displayFormat>IIQL-{00000}</displayFormat>
        <label>Internal Interview Question Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Interview Question Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>