brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Evalation_Criteria_log__c.field-meta.xml
<CustomField>
    <fullName>Evalation_Criteria_log__c</fullName>
    <label>Evalation Criteria log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>