brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Follow_Ups_Log__c.field-meta.xml
<CustomField>
    <fullName>Follow_Ups_Log__c</fullName>
    <label>Follow Ups Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>