brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Internal_Interview_Section_Log__c.field-meta.xml
<CustomField>
    <fullName>Internal_Interview_Section_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Interview Section Log</label>
    <referenceTo>Internal_Interview_Section_Log__c</referenceTo>
    <relationshipLabel>Internal Interview Question Logs</relationshipLabel>
    <relationshipName>Internal_Interview_Question_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>