brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Notebook_Link_Log__c.field-meta.xml
<CustomField>
    <fullName>Notebook_Link_Log__c</fullName>
    <label>Notebook Link Log</label>
    <type>Url</type>
</CustomField>