brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Question_Bank__c.field-meta.xml
<CustomField>
    <fullName>Question_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Bank</label>
    <referenceTo>Question_Bank__c</referenceTo>
    <relationshipLabel>Internal Interview Question Logs</relationshipLabel>
    <relationshipName>Internal_Interview_Question_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>