brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>