brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Scenario_Log__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Log__c</fullName>
    <label>Scenario Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>