brain/sources/prod-metadata/objects/Internal_Interview_Question_Log__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Internal Interview Question Logs</relationshipLabel>
    <relationshipName>Internal_Interview_Question_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>